2009-12-22  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Holger Freyther.

        Moved QtLauncher from WebKit/qt.

        * QtLauncher: Copied from WebKit/qt/QtLauncher.
        * QtLauncher/QtLauncher.pro:

2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Automate the process of calling prepare-ChangeLog
        https://bugs.webkit.org/show_bug.cgi?id=32816

        This patch automates the process of creating a bug and patch and
        uploading it to bugzilla.  The first cut just calls
        prepare-ChangeLog.

        This patch required some refactoring of upload.py to the Step
        model, but that's worth doing anyway.

        * Scripts/bugzilla-tool:
        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/upload.py:
        * Scripts/modules/commands/upload_unittest.py:
        * Scripts/modules/mock_bugzillatool.py:

2009-12-21  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Did a rename, so checking in the
        version of the script I used.

2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Update status-bubble to show all the queues
        https://bugs.webkit.org/show_bug.cgi?id=32838

        Also, move statusbubble over to use memcache.

        * QueueStatusServer/handlers/statusbubble.py:
        * QueueStatusServer/templates/statusbubble.html:

2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Delete the boring "Empty queue" status messages in QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=32818

        * QueueStatusServer/app.yaml:
        * QueueStatusServer/cron.yaml:
        * QueueStatusServer/handlers/gc.py:
        * QueueStatusServer/main.py:

2009-12-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Exception on queue status server