@@ -1,3 +1,13 @@
+2009-12-22  Philippe Normand  <pnormand@igalia.com>
+
+        Reviewed by Adam Barth.
+
+        check-webkit-style should not warn about NULL usage in g_object_{get,set}
+        https://bugs.webkit.org/show_bug.cgi?id=32858
+
+        * Scripts/modules/cpp_style.py:
+        * Scripts/modules/cpp_style_unittest.py:
+
 2009-12-22  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Rubber-stamped by Holger Freyther.
